--- a/docs/apzvalga/santrauka.tex
+++ b/docs/apzvalga/santrauka.tex
@@ -8,14 +8,14 @@ Modeliai formuojami naudojant įvairius metodus, tačiau dalinimas į mokymo, te
 
 \newpage
 \ktusection{Darbo tikslas ir uždavinys}
-Pavojingi puslapiai skirstomi į skirtingas kategorijas pagal jų vykdomą \cite{tax} ir pagal jų paskirtį žalingų puslapių tinkle \cite{linchpins}. Jų aptikimui naudojami įvairūs metodai \cite{comp}. Šiame darbe bus tobulinamas tokių puslapių aptikimas, naudojant interneto grafo bei puslapių URL informaciją.
+Kenksmingi tinklalapiai skirstomi į skirtingas kategorijas pagal jų vykdomą \cite{tax} ir pagal jų paskirtį žalingų tinklalapių tinkle \cite{linchpins}. Jų aptikimui naudojami įvairūs metodai \cite{comp}. Šiame darbe bus tobulinamas tokių tinklalapių aptikimas, naudojant interneto grafo bei tinklalapių URL informaciją.
 
-Darbo tikslas -- pasiūlyti metodiką ir sukurti įrankį kenksmingų ir nekenksmingų tinklalapių klasifikavimui, kur kenksmingi tinklalapiai yra pavojingų tinklalapių sąrašuose aptinkami adresai.
+Darbo tikslas -- pasiūlyti metodiką ir sukurti įrankį kenksmingų ir nekenksmingų tinklalapių klasifikavimui, kur kenksmingi tinklalapiai yra kenksmingų tinklalapių sąrašuose aptinkami adresai.
 
 Sprendžiami uždaviniai:
 \begin{enumerate}
-    \item klasifikavimo modelių bei sąvybių vektoriaus formavimo metodo parinkimas;
-    \item metodikos klasifikavimo uždaviniui spręsti sukūrimas;
-    \item programinio įrankio klasifikavimui kūrimas;
-    \item pritaikymas naudojant realų duomenų rinkinį.
+    \item sąvybių vektoriaus formavimo ir klasifikavimo modelių parinkimas;
+    \item kenksmingų interneto tinklalapių identifikavimo modelio sukūrimas;
+    \item kenksmingų interneto tinklalapių identifikavimo modelio programinė realizacija;
+    \item kenksmingų interneto tinklalapių identifikavimo modelio pritaikymas analizuojant realų duomenų rinkinį.
 \end{enumerate}
