--- a/docs/metodas/vektoriai.tex
+++ b/docs/metodas/vektoriai.tex
@@ -38,11 +38,11 @@ Tiesinis branduolio tipas yra naudojamas kai funkcija $K$ yra nenaudojama, tokiu
 \end{equation}.
 Šis modelio variantas gali būti naudojamas kai objektai nagrinėjamoje erdvėje gali būti atskirti tiesia plokštumas, nėra reikalingos papildomos modifikacijos.
 
-Polinominis branduolis gali būti formuojamas naudojant \cite{vw}
+Polinominis branduolys gali būti formuojamas naudojant \cite{vw}
 \begin{equation}
     K(u, v) = (1 + u \cdot v)^d
 \end{equation}
-radialinės bazės branduolis išreiškiamas
+radialinės bazės branduolys išreiškiamas
 \begin{equation}
     K(u, v) = exp \big( - \frac{|| u - v ||^2}{2 \sigma ^ 2} \big)
 \end{equation}
