--- a/docs/taikymas/bandymas.tex
+++ b/docs/taikymas/bandymas.tex
@@ -1,13 +1,13 @@
 \ktusection{Praktinis įrankio taikymas}
 
-Sukurtas įrankis bandytas panaudoti naudojant kelias nepavojingas interneto svetaines. Dalis iš bandytų
+Sukurtas įrankis bandytas panaudoti naudojant kelias nekenksmingas interneto svetaines. Dalis iš bandytų
 tinklalapių pateikiama lentelėje \vref{tab:bandymas}.
 
 \begin{ktutable}{bandymas}{Įrankio bandymo rezultatai}
     \begin{tabular}{|p{5 cm}|p{5 cm}|r|}
     \hline
     Tinklalapis & Tinklalapio adresas & Kenksmingas \\ \hline
-    KTU titulinis puslapis & http://ktu.edu/ & Ne \\ \hline
+    KTU titulinis tinklalapis & http://ktu.edu/ & Ne \\ \hline
     Wikipedia straipsnis apie dramblius & https://lt.wikipedia.org/wiki/Drambliai & Ne \\ \hline
     Socialinis tinklas Facebook & https://facebook.com & Taip \\ \hline
     Google paieškos variklis & https://google.com & Taip \\ \hline
