--- a/docs/apzvalga/linchpin.tex
+++ b/docs/apzvalga/linchpin.tex
@@ -1,18 +1,18 @@
-Interneto grafo savybėmis naudojamasi ir straipsnyje \kclong{linchpins}. Čia aprašomas metodas kenksmingos programinės įrangos aptikimui remiantis interneto grafo topologine struktūra. Interneto svetainės yra ranguojamos naudojant PageRnka algoritmą. Taip aptinkamos svetainės kurios yra svarbios kenksmingų svetainių struktūroje.
+Interneto grafo savybėmis naudojamasi ir straipsnyje \kclong{linchpins}. Čia aprašomas metodas kenksmingos programinės įrangos aptikimui remiantis interneto svetainių grafo topologine struktūra. Interneto svetainės yra ranguojamos naudojant PageRnka algoritmą. Taip aptinkamos svetainės kurios yra svarbios kenksmingų svetainių struktūroje.
 
 Kertinės svetainės straipsnyje \cite{linchpins} yra apibrėžiami kaip dedikuoti serveriai kurie yra būtini kenksmingų internetinių svetainių veikimui. Šie serveriai talpina svetaines, kurios pasiekiamos tik iš kenkėjiškų svetainių ir yra skirti valdyti įvairias kenksmingas veiklas nukreipiant naudotojų srautus. Šiuos tinklo ramsčius aptikti ir sustabdyti yra svarbu dėl vykdomo veiklos masto -- jie gyvuoja daug ilgiau nei įprastos kenksmingos svetainės, apdorojami dideli duomenų kiekiai, dėl to jų sustabdymas labiau sutrikdo žalingą veiklą. Sprendžiama šių ramsčių aptikimo problema.
 
-Svetainės kurias stengiamasi aptikti pasižymi tam tikromis topologinėmis savybėmis grafe. Interneto svetaines galima skaidyti į dvi klases - kenksmingos ir nekenksmingos svetainės. Ramstinių serverių tikslas yra nukreipti naudotojus į kitas kenksmingas svetaines, kur bus bandoma monetizuoti naudotojus. Tai vaizduojama \ktufigref{images/linchpin.png}. Čia tinklapiai A, B, C yra kenksmingi tinklapiai kurie yra skirti pritraukti naudotojų dėmesį. Jie gali būti įterpiami į nekenksmingas svetaines įsilaužus ar naudojant apgaulingas reklamas \cite{tax}. Naudotojai iš jų yra nukreipiami į tarpinį, srauto paskirstymo tinklapį. Šis tinklapis vėl naudotojus automatiškai nukreipia į tolimesnius puslapius, kur bus bandoma iš jų pasipelnyti, ar verčiant ką nors nusipirkti, bandant išvilioti asmeninius duomenis ar kita. Ši ramstinių serverių paskirtis, srauto paskirstymas lemia tai, kad ramstiniai serveriai neturi jokių tiesioginių ryšių iš nekenksmingų svetainių. Visi ryšiai ateina tik iš kenksmingų svetainių. \cite{linchpins}. Tokia topologinė struktūra interneto grafe leidžia juos ranguoti naudojant PageRank algoritmą ir tikėtis aukšto rango.
+Svetainės kurias stengiamasi aptikti pasižymi tam tikromis topologinėmis savybėmis grafe. Interneto svetaines galima skaidyti į dvi klases - kenksmingos ir nekenksmingos svetainės. Ramstinių serverių tikslas yra nukreipti naudotojus į kitas kenksmingas svetaines, kur bus bandoma monetizuoti naudotojus. Tai vaizduojama \ktufigref{images/linchpin.png}. Čia tinklapiai A, B, C yra kenksmingi tinklapiai kurie yra skirti pritraukti naudotojų dėmesį. Jie gali būti įterpiami į nekenksmingas svetaines įsilaužus ar naudojant apgaulingas reklamas \cite{tax}. Naudotojai iš jų yra nukreipiami į tarpinį, srauto paskirstymo tinklapį. Šis tinklapis vėl naudotojus automatiškai nukreipia į tolimesnius tinklalapius, kur bus bandoma iš jų pasipelnyti, ar verčiant ką nors nusipirkti, bandant išvilioti asmeninius duomenis ar kita. Ši ramstinių serverių paskirtis, srauto paskirstymas lemia tai, kad ramstiniai serveriai neturi jokių tiesioginių ryšių iš nekenksmingų svetainių. Visi ryšiai ateina tik iš kenksmingų svetainių. \cite{linchpins}. Tokia topologinė struktūra interneto grafe leidžia juos ranguoti naudojant PageRank algoritmą ir tikėtis aukšto rango.
 
 \ktufigure{images/linchpin.png}{10 cm}{Vartotojų srauto paskirstymo schema}
 
-PageRank algoritmas ranguoja interneto puslapius pagal kiekvieno puslapio svarbą. Svarba vertinama pagal nuorodų į puslapį kiekį, laikoma kad svarbesni puslapiai yra dažniau minimi kitose svetainėse. Taip pat svarbių svetainių paminėjimai yra verti daugiau nei nesvarbių svetainių. Taip imituojamas socialinio tinklo prestižo statusas \cite{Wu2008}.
+PageRank algoritmas ranguoja interneto tinklalapius pagal kiekvieno tinklalapio svarbą. Svarba vertinama pagal nuorodų į tinklalapį kiekį, laikoma kad svarbesni tinklalapiai yra dažniau minimi kitose svetainėse. Taip pat svarbių svetainių paminėjimai yra verti daugiau nei nesvarbių svetainių. Taip imituojamas socialinio tinklo prestižo statusas \cite{Wu2008}.
 
-Vertinant svetainės PageRank įvertį internetas laikomas orientuotu grafu $G = (V, E)$ kur $V$ yra grafo viršūnės, tai yra puslapiai, o $E$ yra orientuotos briaunos, tai yra nuorodos tarp puslapių \cite{Wu2008}. Supaprastintas PageRank įvertis yra apibrėžiamas kaip \cite{pagerank}:
+Vertinant svetainės PageRank įvertį internetas laikomas orientuotu grafu $G = (V, E)$ kur $V$ yra grafo viršūnės, tai yra tinklalapiai, o $E$ yra orientuotos briaunos, tai yra nuorodos tarp tinklalapių \cite{Wu2008}. Supaprastintas PageRank įvertis yra apibrėžiamas kaip \cite{pagerank}:
 \begin{equation}
     R(u) = c \sum_{v \in B_u} \frac{R(v)}{N_v}
 \end{equation}
-kur $R(u)$ yra PageRank įvertis svetainei $u$, $B_u$ yra aibė svetainių kurios turi nuorodas į svetainę $u$, $N_v$ yra svetainės $v$ nuorodų į kitus puslapius skaičius, o $c$ normalizavimo faktorius. Šis įvertis yra teisingas, tačiau gali būti lengvai iškreipiamas grafe esančių ciklų. Jie lemtų greitą kilimą range. Tas sprendžiama įtraukiant slopinimo faktorių $d$ \cite{pagerank}. Gaunamas galutinis PageRank įvertis yra:
+kur $R(u)$ yra PageRank įvertis svetainei $u$, $B_u$ yra aibė svetainių kurios turi nuorodas į svetainę $u$, $N_v$ yra svetainės $v$ nuorodų į kitus tinklalapius skaičius, o $c$ normalizavimo faktorius. Šis įvertis yra teisingas, tačiau gali būti lengvai iškreipiamas grafe esančių ciklų. Jie lemtų greitą kilimą range. Tas sprendžiama įtraukiant slopinimo faktorių $d$ \cite{pagerank}. Gaunamas galutinis PageRank įvertis yra:
 \begin{equation}
     R(u) = (1 - d) + d \sum_{v \in B_u} \frac{R(v)}{N_v}
 \end{equation}
@@ -30,4 +30,4 @@ Naudojant turimą duomenų rinkinį dalis žinomų ramstinių serverių yra naud
 
 Naudojant 5\% pradiniam apmokymui aptikta 48.59\% kitų ramstinių serverių. Tai reiškia kad įmanoma aptikti 7 kartus daugiau ramstinių serverių nei buvo panaudota apmokyti pradiniam modeliui. Šiuo atveju pirmojo tipo klaidos pasiekia 2.36\%. Tai yra atvejis pasiekęs didžiausią klaidą ir skirtumą tarp pradinio duomenų rinkinio dydžio ir aptiktų ramstinių serverių kiekio. Metodas gali būti taikomas iteratyviai, panaudojant dalį aptiktų ramstinių serverių kitų serverių radimui. Tai leidžia aptikti žymiai daugiau ramstinių serverių, tačiau klaidos vis dar yra pakankamai žemos, leidžiančios praktinį panaudojimą \cite{linchpins}.
 
-Naudojant šį metodą pasinaudota interneto grafo topologija, naudoti papildomi duomenys - tai yra domeno informacija, svetaines talpinančių serverių duomenys \cite{linchpins}. Šie duomenys yra galimi naudoti dėl turimo kompiuterinių resursų kiekio -- duomenis rinko 7 mėnesius, naudota 20 įrenginių. Norint tai atlikti naudojant vieną kompiuterį prireiktų daugiau nei 10 metų, tai sukelia sunkumų formuojant tokį duomenų rinkinį.
+Naudojant šį metodą pasinaudota interneto svetainių grafo topologija, naudoti papildomi duomenys - tai yra domeno informacija, svetaines talpinančių serverių duomenys \cite{linchpins}. Šie duomenys yra galimi naudoti dėl turimo kompiuterinių resursų kiekio -- duomenis rinko 7 mėnesius, naudota 20 įrenginių. Norint tai atlikti naudojant vieną kompiuterį prireiktų daugiau nei 10 metų, tai sukelia sunkumų formuojant tokį duomenų rinkinį.
