--- a/docs/metodas/mokymas.tex
+++ b/docs/metodas/mokymas.tex
@@ -1,6 +1,6 @@
 \ktusection{Kenksmingų interneto tinklalapių identifikavimo modelio apmokymas}
 
-Supaprastinta modelio schema yra pateikiama \ktufigref{images/mokymas.png} paveiksle.
+Kenksmingų interneto tinklalapių identifikavim modelio apmokymo schema yra pateikiama paveiksle \ktufigref{images/mokymas.png}.
 \ktufigure{images/mokymas.png}{13 cm}{Modelio formavimo schema}
 
 Modeliams mokyti naudojamas duomenų rinkinys yra dalinamas į tris imtis:
@@ -15,12 +15,12 @@ skiriasi mokymosi ir testavimo imčiai modelis yra persimokęs, dėl to reikia k
 Jei gauta modelio kokybė netenkina,  taip pat koreguojami hiperparametrai.
 
 Suformavus modelį kuris tenkina jis yra tikrinamas paskutinį kartą. Tam naudojama validavimo imtis.
-Modelio rezultatai naudojant šią imtį yra laikomi galutine modelio kokybe.
+Modelio rezultatai naudojami įvertinti modelio klasifikavimo kokybę.
 
 
-Modelio vertinimui naudojamas tikslumas, AUC įvertis, specifiškumas, jautrumas. Šios metrikos leidžia
+Modelio klasifikavimo kokybės įverčiai yra tikslumas, AUC įvertis, specifiškumas, jautrumas. Šios metrikos leidžia
  įvertinti modelį net ir esant klasių disbalansui, ko vien naivus teisingų spėjimų procentas parodyti
-  negali. Klasifikavimo modelis gali grąžinti keturis rezultatų tipus pagal jų teisingumą:
+  negali. Klasifikavimo rezultatų lentelę sudaro keturis rezultatų tipai pagal jų teisingumą:
 \begin{enumerate}
     \item teisingai teigiamą rezultatą (žymima $TP$);
     \item klaidingai teigiamą rezultatą (žymima $FP$);
@@ -28,12 +28,12 @@ Modelio vertinimui naudojamas tikslumas, AUC įvertis, specifiškumas, jautrumas
     \item klaidingai neigiamą rezultatą (žymima $FN$).
 \end{enumerate}
 
- Modelio rezultatas yra realus skaičius. Atsižvelgiant į gavėjų veiklos charakteristikų kreivę
-(angl. \textit{receiver operating characteristic curve}), arba tiesiog ROC, galima nustatyti
+ Atsižvelgiant į ROC kreivę
+(angl. \textit{receiver operating characteristic curve}), galima nustatyti
 klasių intervalus kurie yra optimalūs modelio naudojimui. Ši kreivė rodo $TP$ tipo įverčio
 tikimybės santykį su $FP$ tipo įverčio tikimybe keičiant ribinę klasifikatoriaus vertę, pagal
 kurią yra parenkama klasė. AUC metrika yra skaičiuojama kaip plotas, esantis po šia kreive.
-Kiti įverčiai apskaičiuojami naudojant formules:
+Kitos klasifikavimo kokybės metrikos apskaičiuojamos:
 
 \begin{equation}
 \text{jautrumas} = {TP \over {TP + FN}}
@@ -47,4 +47,4 @@ Kiti įverčiai apskaičiuojami naudojant formules:
 \text{specifiškumas} = {TN \over {TN + FP}}
 \end{equation}
 
-Šių įverčių galimos reikšmės yra intervale $[0, 1]$, siekiama, kad jos būtų kuo arčiau $1$.
+Šių kokybės metrikų galimos reikšmės yra intervale $[0, 1]$, siekiama, kad jos būtų kuo arčiau $1$.
