--- a/docs/taikymas/mokymas.tex
+++ b/docs/taikymas/mokymas.tex
@@ -18,9 +18,9 @@ Naudojant atraminių vektorių klasifikatorių sistemoje Vowpal Wabbit naudojami
         \texttt{l2} & & l2 parametrų reguliarizacija \\ \hline
         \texttt{bit\_precision} & & Bitų, naudojamų savybių lentelei, skaičius\\ \hline
         \texttt{kernel} & & Naudojama branduolio funkcija   \\
-                       & poly & polinominis branduolis     \\
-                       & linear & tiesinis branduolis      \\
-                       & rbf & radialinės bazės branduolis \\ \hline
+                       & poly & polinominis branduolys     \\
+                       & linear & tiesinis branduolys      \\
+                       & rbf & radialinės bazės branduolys \\ \hline
         \texttt{degree} & & polinominio branduolio laipsnis \\ \hline
     \end{tabular}
 \end{ktutable}
@@ -34,9 +34,8 @@ funkcijos laipsnis bei parametrų reguliarizavimo koeficientas.
 \begin{ktutable}{initial_train}{Pirminio polinominio branduolio modelio parametrai}
     \begin{tabular}{| l | c | c | c | c | c | c | }
     \hline
-        Kernelio funkcija & polinominė & polinominė & polinominė & polinominė & polinominė & polinominė \\ \hline
         L2 reguliarizacija & $10^{-7}$ & $10^{-5}$ & 0.1 & $10^{-7}$ & $10^{-5}$ & 0.1 \\ \hline
-        Kernelio funkcijos laipsnis & 5 & 5 & 5 & 3 & 3 & 3 \\ \hline
+        Branduolio funkcijos laipsnis & 5 & 5 & 5 & 3 & 3 & 3 \\ \hline
     \end{tabular}
 \end{ktutable}
 
@@ -50,9 +49,9 @@ modelis nekonverguoja.
 Modelio mokymas toliau tyrinėtas naudojant kitas branduolio funkcijas ir derinant jų parametrus.
 Modelio parametrų reguliarizacijos parametras L2 nekeistas.
 
-\ktufigure{images/linear_loss.png}{12 cm}{Tiesinio branduolio modelio mokymas}
-\ktufigure{images/polly_loss.png}{12 cm}{Polinominio branduolio modelio mokymas}
-\ktufigure{images/rbf_loss.png}{12 cm}{Radialinės bazės funkcijos branduolio modelio mokymas}
+\ktufigure{images/linear_loss.png}{12 cm}{Tiesinio branduolio modelio nuostolių ir mokymo pavyzdžių santykis}
+\ktufigure{images/polly_loss.png}{12 cm}{Polinominio branduolio modelio nuostolių ir mokymo pavyzdžių santykis}
+\ktufigure{images/rbf_loss.png}{12 cm}{Radialinės bazės funkcijos branduolio modelio nuostolių ir mokymo pavyzdžių santykis}
 
 Naudojant kitus branduolio tipus pastebėta ta pati tendencija, matoma \ktufigref{images/linear_loss.png}, \ktufigref{images/polly_loss.png}, \ktufigref{images/rbf_loss.png} grafikuose.
 
@@ -80,11 +79,11 @@ didelio resursų kiekio modelio formavimui.
 Mokant tiesinį modelį naudojamas mažesnis savybių lentelės dydis nurodomas naudojant \texttt{bit\_precision}
  parametrą. Tai leidžia optimaliau atlikti mokymą sumažinant naudojamą atminties kiekį. Naudojami $27$ bitai.
 
-Pirminiai modelio mokymo rezultatai pateikiami \ktufigref{images/linearModelLoss.png}. Šiame grafike
+Modelio mokymo nuostoliai pateikiami paveiksle \ktufigref{images/linearModelLoss.png}. Šiame grafike
 matoma, kad nuostolio funkcijos rezultatai yra žymiai geresni nei mokant atraminių vektorių klasifikatorius. Mokomas modelis konverguoja, pasiekiama gana pastovi nuostolio funkcijos reikšmė, kuri
 yra nedidelė, artima nuliui.
 
-\ktufigure{images/linearModelLoss.png}{14 cm}{Tiesinio modelio mokymas}
+\ktufigure{images/linearModelLoss.png}{14 cm}{Tiesinės regresijos modelio nuostolių priklausomybė nuo mokymo pavyzdžių}
 
 Apmokius modelį vertinamas jo jautrumas, tikslumas, specifiškumas, AUC įvertis. Jie pateikiami
 lentelėje \vref{tab:firstLinearModel}. Parametrų L2 reguliarizavimui naudota vertė $10^{-6}$.
@@ -92,7 +91,7 @@ lentelėje \vref{tab:firstLinearModel}. Parametrų L2 reguliarizavimui naudota v
 Gautas modelis itin gerai prognozuoja testavimo rinkinio duomenis. Suformuotas tiesinis modelis naudoja
 $145832$ matmenų.
 
-\begin{ktutable}{firstLinearModel}{Pirminio tiesinio modelio rezultatai}
+\begin{ktutable}{firstLinearModel}{Tiesinės regresijos modelio kokybės įverčiai}
     \begin{tabular}{| l | l |}
     \hline
        Matas & Reikšmė \\ \hline
@@ -110,9 +109,9 @@ atraminių vektorių klasifikatorių, kuris šiame straipsnyje buvo išskiriamas
 
 \ktusubsection{Sprendimų medžio modelio formavimas}
 
-\ktufigure{images/treeLoss.png}{12 cm}{Sprendimų medžio modelio nuostolių funkcija}
+\ktufigure{images/treeLoss.png}{12 cm}{Sprendimų medžio modelio nuostolių priklausomybė nuo pavyzdžių skaičiaus}
 
-Paskutinis naudojamas modelis yra sprendimų medis. Modelio naudojami parametrai pateikiami lentelėje \vref{tab:medisParams}.
+Sprendimų medžio modelio mokymo parametrai pateikiami lentelėje \vref{tab:medisParams}.
 
 \begin{ktutable}{medisParams}{Sprendimų medžio modelio hiperparametrai}
     \begin{tabular}{| l | l | p{7cm}|}
@@ -129,7 +128,7 @@ Paskutinis naudojamas modelis yra sprendimų medis. Modelio naudojami parametrai
     \end{tabular}
 \end{ktutable}
 
-Sprendimų medžio modelio mokymas vyksta sėkmingai, stebint nuostolio funkcijos vertes \ktufigref{images/treeLoss.png}.
+Sprendimų medžio modelio mokymas vyksta sėkmingai, stebint nuostolio funkcijos vertes paveiksle \ktufigref{images/treeLoss.png}.
 
 Nepaisant gero nuostolio funkcijos rezultato šis modelis persimokė su visomis naudotomis
 hiperparametrų vertėmis. Šis modelis visada prognozuoja tik vieną iš reikšmių, tai yra
@@ -145,10 +144,10 @@ su pateiktais įvairių modelių rezultatais straipsnyje \cite{comp}, kurie pate
 lentelėje \vref{tab:compTable} visą mokymą galima laikyti pasisekusiu. Nors apmokytas
 tik vienas modelis iš trijų jis yra itin tikslus ir lenkia atraminių vektorių mašinų klasifikatorių, kuris buvo įvertintas kaip geriausias.
 
-\begin{ktutable}{compTable}{Pirminio tiesinio modelio rezultatai}
+\begin{ktutable}{compTable}{Tiesinės regresijos modelio kokybės metrikos}
     \begin{tabular}{|l|p{3cm}|p{3cm}|p{3cm}|p{3cm}|}
     \hline
-                             & Tiesinis modelis  &  K Artimiausių kaimynų modelis  &  Radialinės bazės funkcijos branduolio atraminių vektorių klasifikatorius  &  Tiesinio branduolio atraminių vektorių klasifikatorius \\ \hline
+                             & Tiesinis modelis  &  K-artimiausių kaimynų modelis  &  Radialinės bazės funkcijos branduolio atraminių vektorių klasifikatorius  &  Tiesinio branduolio atraminių vektorių klasifikatorius \\ \hline
                Tikslumas     & 0.97552           & 0.91   & 0.97  &  0.92         \\ \hline
     \end{tabular}
 \end{ktutable}
