is it done yet?

--- a/docs/paper.tex
+++ b/docs/paper.tex
@@ -107,13 +107,10 @@ praktiniam panaudojimui. Kritiškai įvertinamas praktinis įrankio panaudojimas
 \ktunchapter{Išvados}
 
 \begin{enumerate}[label=\arabic*.]
-\item Apžvelgus literatūrą parinkti klasifikavimo modeliai ir pasiūlyta naudoti PageRank
- įverčius topologinei svetainių grafo informacijai panaudoti savybių vektoriaus formavime;
-\item Sukurta metodika kenksmingų tinklalapių klasifikavimui;
-\item Įgyvendinta pasiūlyta metodologija sukuriant mašininio mokymo modelius bei sukurtas
- programinis įrankis praktiniam modelio panaudojimui;
-\item Sukurtas įrankis naudotas su realiu duomenų rinkiniu, įvertinti įrankio trūkumai:
-lankstumo bei aiškumo trūkumas klasifikuojant tam tikrus populiarius tinklalapius ir privalumai.
+\item Apžvelgus literatūrą parinkti klasifikavimo modeliai ir pasiūlytas PageRank įverčio naudojimas kenksmingų interneto tinklalapių identifikavimo modelyje;
+\item Suformuotas modelis kurio tikslumas 97.5 \%;
+\item Sukurta kenksmingų interneto tinklalapių identifikavimo programa kuri gali būti lengvai modifikuojama, tiksliai identifikuoja kenksmingus tinklalapius, pagal validavimo imtį, tačiau klaidingai identifikuoja tam tikrus tinklalapius;
+\item ateityje siūloma tobulinti programą į klasifikuojamų objektų požymius įtraukiant tinklalapių turinį bei serverių informaciją atspindinčius parametrus.
 \end{enumerate}
 
 \newpage
